# GRL-SNAM

./: .gitignore  README.md  README_ALTERNATING_PLAN_ENERGY.md  README_BIND_STAGE1_PIPELINE.md  README_DUAL_WEIGHT_ENERGY.md  README_FLOW_PLANNING_PIPELINE.md  README_LS6_THREE_STAGE.md  README_STAGE1_ACKERMANN.md  README_STAGE1_CASE_SUITE.md  compare_stage1_ph_mpc.py  compare_stage1_policy_mpc.py  eval_coef_energy.py  eval_dual_weight_scenario_mpc.py  eval_dual_weight_sensitivity.py  eval_stage1_ackermann.py  eval_stage1_ph_energy.py  generate_stage1_ackermann_rollouts.py  generate_stage1_case_suite.py  ls6_three_stage_a100.slurm  pyproject.toml  report_stage1_case_suite.py  surrogate_robust.py  train_coef_energy.py  train_dual_weight_energy.py  train_stage1_ackermann.py  train_stage1_ph_energy.py  train_stage1_ph_multistage.py  visualize_plan_goals.py
.github/workflows/: ci.yml
cvcpkg/recipes/grl-snam/: README.md  build.sh  recipe.yaml
docs/: developer-guide.md  pypi-publishing-roadmap.md
examples/: lab_demo.py
experiments/: e.py  e0.py  e1.py  e10.py  e10_1.py  e3.py  e4.py  e5.py  e5_old.py  e7.py  e9.py
grl_snam/: __init__.py  adaptation.py  dynamics.py  network.py
grl_snam/utils/: __init__.py
grl_snam_lab/: README.md  __init__.py  lab.py
scripts/: check_dataset.py  dual_weight_energy_nav.py  energy_data_navmax.py  failure_replay.py  integrators.py  large_scale_ex.py  parking_aug.py  ring_dataset_maxmin.py  spline_dataset_maximin.py  spline_stagewise6.py  stage1_ackermann_scan.py  stage1_energy_adapter.py  stage1_mpc.py  stage1_rollout_dataset.py  stagewise_dataset.py  working_spline_pathwise.py
src/utils/: dijkstra.py  online_stage_manager.py  tensorboard_logger_mixin.py
tests/: test_lab.py  test_smoke.py
